Bug 330148 - Interlaced GIF images mishandled with giflib v5
Summary: Interlaced GIF images mishandled with giflib v5
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (show other bugs)
Version: 4.11.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-19 10:25 UTC by Andreas Schwab
Modified: 2014-01-22 04:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 4.12.2


Attachments
Fix display of interlaced GIF images with giflib v5 (1.04 KB, patch)
2014-01-19 10:25 UTC, Andreas Schwab
Details
Konqueror with KHTML backend showing the issue (271.62 KB, image/png)
2014-01-20 17:48 UTC, Wolfgang Bauer
Details
Equivalent for khtml framework (915 bytes, patch)
2014-01-22 00:27 UTC, Hrvoje Senjan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2014-01-19 10:25:50 UTC
Created attachment 84730 [details]
Fix display of interlaced GIF images with giflib v5

With giflib v5 GIF images are already deinterlaced by the libraray

Testcase: http://www.taz.de/digitaz/.tom/tomdestages?day=2014/01/17
Comment 1 Wolfgang Bauer 2014-01-20 17:48:47 UTC
Created attachment 84750 [details]
Konqueror with KHTML backend showing the issue

I'm also experiencing this issue since upgrading to openSUSE 13.1, which includes giflib 5.
It is still there in KDE 4.12.1, see attached screenshot of Konqueror with KHTML backend on http://bochs.sourceforge.net/.

The attached patch fixes it for me.
Comment 2 Christoph Feck 2014-01-20 21:01:34 UTC
Thanks Andreas for the patch. Can you commit it to 4.12 branch, please?
Comment 3 Andreas Schwab 2014-01-20 22:02:46 UTC
I'm not a developer.
Comment 4 Christoph Feck 2014-01-20 22:04:42 UTC
Okey, no problem, will commit it in a minute.
Comment 5 Christoph Feck 2014-01-20 22:10:51 UTC
Git commit ce6021c15784d2328a7de6911cc0b90b61e448eb by Christoph Feck, on behalf of Andreas Schwab.
Committed on 20/01/2014 at 22:08.
Pushed by cfeck into branch 'KDE/4.12'.

Fix display of interlaced GIF images with giflib v5

With giflib v5 GIF images don't need to be deinterlaced manually
FIXED-IN: 4.12.2

M  +2    -0    khtml/imload/decoders/gifloader.cpp

http://commits.kde.org/kdelibs/ce6021c15784d2328a7de6911cc0b90b61e448eb
Comment 6 Wolfgang Bauer 2014-01-21 18:02:09 UTC
I submitted the patch to openSUSE's KDE packages as well (4.11 and 4.12), so it should be fixed there with the next KDE update.
Comment 7 Hrvoje Senjan 2014-01-22 00:27:01 UTC
Created attachment 84788 [details]
Equivalent for khtml framework

Christoph - do you want to commit , or shall i?
(coding style is slightly 'better' in KF5, so this version ruins it a little ;-)
Comment 8 Christoph Feck 2014-01-22 04:35:29 UTC
Hrvoje, for the frameworks branch, please open a review request for the new khtml repo.