Fix display of interlaced GIF images with giflib v5

With giflib v5 GIF images don't need to be deinterlaced manually

BUG: 330148
FIXED-IN: 4.12.2